// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots entities/Article/ArticleDetails Loading 1`] = `null`;

exports[`Storyshots entities/Article/ArticleDetails Normal 1`] = `null`;

exports[`Storyshots entities/Article/ArticleDetails With Error 1`] = `null`;

exports[`Storyshots entities/Article/ArticleList Is Loading Big 1`] = `null`;

exports[`Storyshots entities/Article/ArticleList Is Loading Small 1`] = `null`;

exports[`Storyshots entities/Article/ArticleList List Big 1`] = `null`;

exports[`Storyshots entities/Article/ArticleList List Small 1`] = `null`;

exports[`Storyshots entities/Article/ArticleListItem Big 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className=" BIG"
    data-testid="ArticleListItem"
  >
    <div
      className="card normal"
    >
      <div
        className="header"
      >
        <div
          className="skeleton"
          style={
            {
              "borderRadius": "50%",
              "height": 30,
              "width": 30,
            }
          }
        >
          <div />
        </div>
        <div
          className="textWrapper primary left size_m username"
        >
          <p
            className="text"
            data-testid="Text.Paragraph"
          >
            admin
          </p>
        </div>
        <div
          className="textWrapper primary left size_m date"
        >
          <p
            className="text"
            data-testid="Text.Paragraph"
          >
            26.02.2022
          </p>
        </div>
      </div>
      <div
        className="textWrapper primary left size_m title"
      >
        <p
          className="text"
          data-testid="Text.Paragraph"
        >
          Javascript news
        </p>
      </div>
      <div
        className="textWrapper primary left size_m type"
      >
        <p
          className="text"
          data-testid="Text.Paragraph"
        >
          IT
        </p>
      </div>
      <div
        className="skeleton"
        style={
          {
            "borderRadius": undefined,
            "height": 250,
            "width": "100%",
          }
        }
      >
        <div />
      </div>
      <div
        className="articleTextBlockComponent textBlock"
      >
        <div
          className="textWrapper primary left size_m title"
        >
          <h2
            className="title"
            data-testid="Text.Header"
          >
            Заголовок этого блока
          </h2>
        </div>
        <div
          className="textWrapper primary left size_m paragraph"
        >
          <p
            className="text"
            data-testid="Text.Paragraph"
          >
            Программа, которую по традиции называют «Hello, world!», очень проста. Она выводит куда-либо фразу «Hello, world!», или другую подобную, средствами некоего языка.
          </p>
        </div>
        <div
          className="textWrapper primary left size_m paragraph"
        >
          <p
            className="text"
            data-testid="Text.Paragraph"
          >
            JavaScript — это язык, программы на котором можно выполнять в разных средах. В нашем случае речь идёт о браузерах и о серверной платформе Node.js. Если до сих пор вы не написали ни строчки кода на JS и читаете этот текст в браузере, на настольном компьютере, это значит, что вы буквально в считанных секундах от своей первой JavaScript-программы.
          </p>
        </div>
        <div
          className="textWrapper primary left size_m paragraph"
        >
          <p
            className="text"
            data-testid="Text.Paragraph"
          >
            Существуют и другие способы запуска JS-кода в браузере. Так, если говорить об обычном использовании программ на JavaScript, они загружаются в браузер для обеспечения работы веб-страниц. Как правило, код оформляют в виде отдельных файлов с расширением .js, которые подключают к веб-страницам, но программный код можно включать и непосредственно в код страницы. Всё это делается с помощью тега &lt;script&gt;. Когда браузер обнаруживает такой код, он выполняет его. Подробности о теге script можно посмотреть на сайте w3school.com. В частности, рассмотрим пример, демонстрирующий работу с веб-страницей средствами JavaScript, приведённый на этом ресурсе. Этот пример можно запустить и средствами данного ресурса (ищите кнопку Try it Yourself), но мы поступим немного иначе. А именно, создадим в каком-нибудь текстовом редакторе (например — в VS Code или в Notepad++) новый файл, который назовём hello.html, и добавим в него следующий код:
          </p>
        </div>
      </div>
      <div
        className="footer"
      >
        <a
          className="appLink primary"
          href="/articles/1"
          onClick={[Function]}
        >
          <button
            className="button outline size_m"
            type="button"
          >
            Читать далее...
          </button>
        </a>
        <div
          className="textWrapper primary left size_m views"
        >
          <p
            className="text"
            data-testid="Text.Paragraph"
          >
            1022
          </p>
        </div>
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots entities/Article/ArticleListItem Small 1`] = `
<div
  className="app app_light_theme"
>
  <a
    className="appLink  SMALL primary"
    data-testid="ArticleListItem"
    href="/articles/1"
    onClick={[Function]}
  >
    <div
      className="card normal"
    >
      <div
        className="imageWrapper"
      >
        <div
          className="skeleton"
          style={
            {
              "borderRadius": undefined,
              "height": 200,
              "width": 200,
            }
          }
        >
          <div />
        </div>
        <div
          className="textWrapper primary left size_m date"
        >
          <p
            className="text"
            data-testid="Text.Paragraph"
          >
            26.02.2022
          </p>
        </div>
      </div>
      <div
        className="infoWrapper"
      >
        <div
          className="textWrapper primary left size_m type"
        >
          <p
            className="text"
            data-testid="Text.Paragraph"
          >
            IT
          </p>
        </div>
        <div
          className="textWrapper primary left size_m views"
        >
          <p
            className="text"
            data-testid="Text.Paragraph"
          >
            1022
          </p>
        </div>
        <div />
      </div>
      <div
        className="textWrapper primary left size_m title"
      >
        <p
          className="text"
          data-testid="Text.Paragraph"
        >
          Javascript news
        </p>
      </div>
    </div>
  </a>
</div>
`;

exports[`Storyshots entities/Article/ArticleSortSelector Dark 1`] = `null`;

exports[`Storyshots entities/Article/ArticleSortSelector Normal 1`] = `null`;

exports[`Storyshots entities/Article/ArticleTypeTabs Dark 1`] = `null`;

exports[`Storyshots entities/Article/ArticleTypeTabs Normal 1`] = `null`;

exports[`Storyshots entities/Article/ArticleViewSelector Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="articleViewSelector"
    >
      <button
        className="button clear size_m"
        onClick={[Function]}
        type="button"
      >
        <div />
      </button>
      <button
        className="button clear size_m"
        onClick={[Function]}
        type="button"
      >
        <div />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots entities/Article/ArticleViewSelector Normal 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="articleViewSelector"
  >
    <button
      className="button clear size_m"
      onClick={[Function]}
      type="button"
    >
      <div />
    </button>
    <button
      className="button clear size_m"
      onClick={[Function]}
      type="button"
    >
      <div />
    </button>
  </div>
</div>
`;

exports[`Storyshots entities/Comment/CommentCard Loading 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="flex max commentCard loading justifyStart alignStart directionColumn gap8"
    data-testid="CommentCard.Loading"
  >
    <div
      className="header"
    >
      <div
        className="skeleton"
        style={
          {
            "borderRadius": "50%",
            "height": 30,
            "width": 30,
          }
        }
      >
        <div />
      </div>
      <div
        className="skeleton username"
        style={
          {
            "borderRadius": undefined,
            "height": 16,
            "width": 100,
          }
        }
      >
        <div />
      </div>
    </div>
    <div
      className="skeleton text"
      style={
        {
          "borderRadius": undefined,
          "height": 50,
          "width": "100%",
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots entities/Comment/CommentCard Normal 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="flex max commentCard justifyStart alignStart directionColumn gap8"
    data-testid="CommentCard.Content"
  >
    <a
      className="appLink header primary"
      href="/profile/1"
      onClick={[Function]}
    >
      <div
        className="textWrapper primary left size_m username"
      >
        <h2
          className="title"
          data-testid="Text.Header"
        >
          lorem1
        </h2>
      </div>
    </a>
    <div
      className="textWrapper primary left size_m text"
    >
      <p
        className="text"
        data-testid="Text.Paragraph"
      >
        lorem1
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots entities/Comment/CommentList Loading 1`] = `null`;

exports[`Storyshots entities/Comment/CommentList Normal 1`] = `null`;

exports[`Storyshots entities/CountrySelect Loading 1`] = `null`;

exports[`Storyshots entities/CountrySelect Primary 1`] = `null`;

exports[`Storyshots entities/CountrySelect Primary 1 1`] = `null`;

exports[`Storyshots entities/CountrySelect With Error 1`] = `null`;

exports[`Storyshots entities/CurrencySelect Primary 1`] = `null`;

exports[`Storyshots entities/Notification/NotificationItem Dark 1`] = `null`;

exports[`Storyshots entities/Notification/NotificationItem Normal 1`] = `null`;

exports[`Storyshots entities/Notification/NotificationList Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="flex max notificationList justifyStart alignStart directionColumn gap16"
    >
      <div
        className="skeleton"
        style={
          {
            "borderRadius": "8px",
            "height": "80px",
            "width": "100%",
          }
        }
      >
        <div />
      </div>
      <div
        className="skeleton"
        style={
          {
            "borderRadius": "8px",
            "height": "80px",
            "width": "100%",
          }
        }
      >
        <div />
      </div>
      <div
        className="skeleton"
        style={
          {
            "borderRadius": "8px",
            "height": "80px",
            "width": "100%",
          }
        }
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots entities/Notification/NotificationList Normal 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="flex max notificationList justifyStart alignStart directionColumn gap16"
  >
    <div
      className="skeleton"
      style={
        {
          "borderRadius": "8px",
          "height": "80px",
          "width": "100%",
        }
      }
    >
      <div />
    </div>
    <div
      className="skeleton"
      style={
        {
          "borderRadius": "8px",
          "height": "80px",
          "width": "100%",
        }
      }
    >
      <div />
    </div>
    <div
      className="skeleton"
      style={
        {
          "borderRadius": "8px",
          "height": "80px",
          "width": "100%",
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots entities/RatingCard Dark 1`] = `null`;

exports[`Storyshots entities/RatingCard Normal 1`] = `null`;

exports[`Storyshots features/AddCommentForm Dark 1`] = `null`;

exports[`Storyshots features/AddCommentForm Normal 1`] = `null`;

exports[`Storyshots features/ArticleEditForm Dark 1`] = `null`;

exports[`Storyshots features/ArticleEditForm Normal 1`] = `null`;

exports[`Storyshots features/ArticleRating Dark 1`] = `null`;

exports[`Storyshots features/ArticleRating Normal 1`] = `null`;

exports[`Storyshots features/ArticleRecommendationsList Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  />
</div>
`;

exports[`Storyshots features/ArticleRecommendationsList Normal 1`] = `
<div
  className="app app_light_theme"
/>
`;

exports[`Storyshots features/AvatarDropdown Dark 1`] = `null`;

exports[`Storyshots features/AvatarDropdown Normal 1`] = `null`;

exports[`Storyshots features/EditableProfileCard Dark 1`] = `null`;

exports[`Storyshots features/EditableProfileCard Normal 1`] = `null`;

exports[`Storyshots features/LoginForm Loading 1`] = `null`;

exports[`Storyshots features/LoginForm Primary 1`] = `null`;

exports[`Storyshots features/LoginForm With Error 1`] = `null`;

exports[`Storyshots features/NotificationButton Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div>
      <div
        className=" notificationButton popup"
        data-headlessui-state=""
      >
        <div
          aria-expanded={false}
          className="trigger"
          data-headlessui-state=""
          id="headlessui-popover-button-:r0:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
        >
          <button
            className="button clear size_m"
            onClick={[Function]}
            type="button"
          >
            <div />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots features/NotificationButton Normal 1`] = `
<div
  className="app app_light_theme"
>
  <div>
    <div
      className=" notificationButton popup"
      data-headlessui-state=""
    >
      <div
        aria-expanded={false}
        className="trigger"
        data-headlessui-state=""
        id="headlessui-popover-button-:r5:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <button
          className="button clear size_m"
          onClick={[Function]}
          type="button"
        >
          <div />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots pages/AboutPage Dark 1`] = `null`;

exports[`Storyshots pages/AboutPage Light 1`] = `null`;

exports[`Storyshots pages/AdminPanelPage Dark 1`] = `null`;

exports[`Storyshots pages/AdminPanelPage Normal 1`] = `null`;

exports[`Storyshots pages/ArticleDetailsPage Loading 1`] = `
<div
  className="app app_light_theme"
/>
`;

exports[`Storyshots pages/ArticleDetailsPage Normal 1`] = `
<div
  className="app app_light_theme"
/>
`;

exports[`Storyshots pages/ArticleDetailsPage With Error 1`] = `
<div
  className="app app_light_theme"
/>
`;

exports[`Storyshots pages/ArticleDetailsPage/ArticleDetailsComments Dark 1`] = `null`;

exports[`Storyshots pages/ArticleDetailsPage/ArticleDetailsComments Normal 1`] = `null`;

exports[`Storyshots pages/ArticleDetailsPage/ArticleDetailsPageHeader Dark 1`] = `null`;

exports[`Storyshots pages/ArticleDetailsPage/ArticleDetailsPageHeader Normal 1`] = `null`;

exports[`Storyshots pages/ArticleEditPage Dark 1`] = `null`;

exports[`Storyshots pages/ArticleEditPage Normal 1`] = `null`;

exports[`Storyshots pages/ArticlesPage/ArticleInfiniteList Dark 1`] = `null`;

exports[`Storyshots pages/ArticlesPage/ArticleInfiniteList Normal 1`] = `null`;

exports[`Storyshots pages/ArticlesPage/ArticlePageFilters Dark 1`] = `null`;

exports[`Storyshots pages/ArticlesPage/ArticlePageFilters Normal 1`] = `null`;

exports[`Storyshots pages/ArticlesPage/ArticlesPage Loading 1`] = `null`;

exports[`Storyshots pages/ArticlesPage/ArticlesPage Normal 1`] = `null`;

exports[`Storyshots pages/ArticlesPage/ArticlesPage With Error 1`] = `null`;

exports[`Storyshots pages/ForbiddenPage Dark 1`] = `null`;

exports[`Storyshots pages/ForbiddenPage Normal 1`] = `null`;

exports[`Storyshots pages/MainPage Dark 1`] = `null`;

exports[`Storyshots pages/MainPage Light 1`] = `null`;

exports[`Storyshots pages/NotFoundPage Dark 1`] = `null`;

exports[`Storyshots pages/NotFoundPage Light 1`] = `null`;

exports[`Storyshots pages/ProfilePage Dark 1`] = `null`;

exports[`Storyshots pages/ProfilePage Light 1`] = `null`;

exports[`Storyshots shared/AppImage Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="skeleton"
      style={
        {
          "borderRadius": undefined,
          "height": 250,
          "width": "100%",
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/AppImage Error Alt 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="skeleton"
    style={
      {
        "borderRadius": undefined,
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`Storyshots shared/AppImage Error Alt Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="skeleton"
      style={
        {
          "borderRadius": undefined,
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/AppImage Error Fallback 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="skeleton"
    style={
      {
        "borderRadius": undefined,
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`Storyshots shared/AppImage Error Fallback Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="skeleton"
      style={
        {
          "borderRadius": undefined,
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/AppImage Normal 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_light_theme"
  >
    <div
      className="skeleton"
      style={
        {
          "borderRadius": undefined,
          "height": 250,
          "width": "100%",
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/AppLink Primary 1`] = `
<div
  className="app app_light_theme"
>
  <a
    className="appLink primary"
    href="/"
    onClick={[Function]}
  >
    Text
  </a>
</div>
`;

exports[`Storyshots shared/AppLink Primary Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_light_theme"
  >
    <a
      className="appLink primary"
      href="/"
      onClick={[Function]}
    >
      Text
    </a>
  </div>
</div>
`;

exports[`Storyshots shared/AppLink Secondary 1`] = `
<div
  className="app app_light_theme"
>
  <a
    className="appLink secondary"
    href="/"
    onClick={[Function]}
  >
    Text
  </a>
</div>
`;

exports[`Storyshots shared/AppLink Secondary Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <a
      className="appLink primary"
      href="/"
      onClick={[Function]}
    >
      Text
    </a>
  </div>
</div>
`;

exports[`Storyshots shared/Avatar Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="skeleton"
      style={
        {
          "borderRadius": "50%",
          "height": 150,
          "width": 150,
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Avatar Normal 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_light_theme"
  >
    <div
      className="skeleton"
      style={
        {
          "borderRadius": "50%",
          "height": 150,
          "width": 150,
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Avatar Small Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="skeleton"
      style={
        {
          "borderRadius": "50%",
          "height": 50,
          "width": 50,
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Avatar Small Light 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_light_theme"
  >
    <div
      className="skeleton"
      style={
        {
          "borderRadius": "50%",
          "height": 50,
          "width": 50,
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Button Background Inverted 1`] = `
<div
  className="app app_light_theme"
>
  <button
    className="button backgroundInverted size_m"
    type="button"
  >
    Text
  </button>
</div>
`;

exports[`Storyshots shared/Button Background Theme 1`] = `
<div
  className="app app_light_theme"
>
  <button
    className="button background size_m"
    type="button"
  >
    Text
  </button>
</div>
`;

exports[`Storyshots shared/Button Clear 1`] = `
<div
  className="app app_light_theme"
>
  <button
    className="button clear size_m"
    type="button"
  >
    Text
  </button>
</div>
`;

exports[`Storyshots shared/Button Clear Inverted 1`] = `
<div
  className="app app_light_theme"
>
  <button
    className="button clearInverted size_m"
    type="button"
  >
    Text
  </button>
</div>
`;

exports[`Storyshots shared/Button Disabled 1`] = `
<div
  className="app app_light_theme"
>
  <button
    className="button outline size_m disabled"
    type="button"
  >
    &gt;
  </button>
</div>
`;

exports[`Storyshots shared/Button Outline 1`] = `
<div
  className="app app_light_theme"
>
  <button
    className="button outline size_m"
    type="button"
  >
    Text
  </button>
</div>
`;

exports[`Storyshots shared/Button Outline Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <button
      className="button outline size_m"
      type="button"
    >
      Text
    </button>
  </div>
</div>
`;

exports[`Storyshots shared/Button Outline L 1`] = `
<div
  className="app app_light_theme"
>
  <button
    className="button outline size_l"
    type="button"
  >
    Text
  </button>
</div>
`;

exports[`Storyshots shared/Button Outline XL 1`] = `
<div
  className="app app_light_theme"
>
  <button
    className="button outline size_xl"
    type="button"
  >
    Text
  </button>
</div>
`;

exports[`Storyshots shared/Button Primary 1`] = `
<div
  className="app app_light_theme"
>
  <button
    className="button outline size_m"
    type="button"
  >
    Text
  </button>
</div>
`;

exports[`Storyshots shared/Button Square 1`] = `
<div
  className="app app_light_theme"
>
  <button
    className="button backgroundInverted square size_m"
    type="button"
  >
    &gt;
  </button>
</div>
`;

exports[`Storyshots shared/Button Square L 1`] = `
<div
  className="app app_light_theme"
>
  <button
    className="button backgroundInverted square size_l"
    type="button"
  >
    &gt;
  </button>
</div>
`;

exports[`Storyshots shared/Button Square XL 1`] = `
<div
  className="app app_light_theme"
>
  <button
    className="button backgroundInverted square size_xl"
    type="button"
  >
    &gt;
  </button>
</div>
`;

exports[`Storyshots shared/Card Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="card normal"
    >
      <div
        className="textWrapper primary left size_m"
      >
        <h2
          className="title"
          data-testid="Text.Header"
        >
          lorem
        </h2>
        <p
          className="text"
          data-testid="Text.Paragraph"
        >
          lorem lorem
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Card Normal 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="card normal"
  >
    <div
      className="textWrapper primary left size_m"
    >
      <h2
        className="title"
        data-testid="Text.Header"
      >
        lorem
      </h2>
      <p
        className="text"
        data-testid="Text.Paragraph"
      >
        lorem lorem
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Code Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <pre
      className="code"
    >
      <button
        className="button clear size_m copyBtn"
        onClick={[Function]}
        type="button"
      >
        <div />
      </button>
      <code>
        export default {
    title: 'shared/Code',
    component: Code,
    argTypes: {
        backgroundColor: { control: 'color' },
    },
} as Meta&lt;typeof Code&gt;;

const Template: StoryFn&lt;typeof Code&gt; = (args) =&gt; &lt;Code {...args} /&gt;;

export const Normal = Template.bind({});
      </code>
    </pre>
  </div>
</div>
`;

exports[`Storyshots shared/Drawer Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  />
</div>
`;

exports[`Storyshots shared/Drawer Normal 1`] = `
<div
  className="app app_light_theme"
/>
`;

exports[`Storyshots shared/Dropdown Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className=" popup"
      data-headlessui-state=""
    >
      <button
        aria-expanded={false}
        aria-haspopup="menu"
        className="trigger"
        data-headlessui-state=""
        id="headlessui-menu-button-:ra:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <button
          className="button outline size_m"
          type="button"
        >
          Open
        </button>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Dropdown Normal 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className=" popup"
    data-headlessui-state=""
  >
    <button
      aria-expanded={false}
      aria-haspopup="menu"
      className="trigger"
      data-headlessui-state=""
      id="headlessui-menu-button-:rc:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <button
        className="button outline size_m"
        type="button"
      >
        Open
      </button>
    </button>
  </div>
</div>
`;

exports[`Storyshots shared/Flex Column 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="flex justifyStart alignCenter directionColumn"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
    <div>
      3
    </div>
    <div>
      4
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Flex Column Align End 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="flex justifyStart alignEnd directionColumn gap16"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
    <div>
      3
    </div>
    <div>
      4
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Flex Column Gap 16 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="flex justifyStart alignCenter directionColumn gap16"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
    <div>
      3
    </div>
    <div>
      4
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Flex Row 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="flex justifyStart alignCenter directionRow"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
    <div>
      3
    </div>
    <div>
      4
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Flex Row Gap 4 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="flex justifyStart alignCenter directionRow gap4"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
    <div>
      3
    </div>
    <div>
      4
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Flex Row Gap 8 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="flex justifyStart alignCenter directionRow gap8"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
    <div>
      3
    </div>
    <div>
      4
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Flex Row Gap 16 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="flex justifyStart alignCenter directionRow gap16"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
    <div>
      3
    </div>
    <div>
      4
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Flex Row Gap 32 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="flex justifyStart alignCenter directionRow gap32"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
    <div>
      3
    </div>
    <div>
      4
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Input Primary 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="inputWrapper"
  >
    <div
      className="placeholder"
    >
      Type text&gt;
    </div>
    <div
      className="caretWrapper"
    >
      <input
        className="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onSelect={[Function]}
        type="text"
        value="123123"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/ListBox Bottom Left Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    style={
      {
        "padding": "100px",
      }
    }
  >
    <div
      className="app app_dark_theme"
    >
      <div
        className="flex justifyStart alignCenter directionRow gap4"
      >
        <div
          className=" popup"
          data-headlessui-state=""
        >
          <div
            aria-expanded={false}
            aria-haspopup="listbox"
            className="trigger"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-listbox-button-:re:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <button
              className="button outline size_m"
              type="button"
            >
              bottom left
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/ListBox Bottom Left Light 1`] = `
<div
  className="app app_light_theme"
>
  <div
    style={
      {
        "padding": "100px",
      }
    }
  >
    <div
      className="flex justifyStart alignCenter directionRow gap4"
    >
      <div
        className=" popup"
        data-headlessui-state=""
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          className="trigger"
          data-headlessui-state=""
          disabled={false}
          id="headlessui-listbox-button-:rg:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <button
            className="button outline size_m"
            type="button"
          >
            bottom left
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/ListBox Bottom Right Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    style={
      {
        "padding": "100px",
      }
    }
  >
    <div
      className="app app_dark_theme"
    >
      <div
        className="flex justifyStart alignCenter directionRow gap4"
      >
        <div
          className=" popup"
          data-headlessui-state=""
        >
          <div
            aria-expanded={false}
            aria-haspopup="listbox"
            className="trigger"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-listbox-button-:ri:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <button
              className="button outline size_m"
              type="button"
            >
              bottom right
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/ListBox Bottom Right Light 1`] = `
<div
  className="app app_light_theme"
>
  <div
    style={
      {
        "padding": "100px",
      }
    }
  >
    <div
      className="flex justifyStart alignCenter directionRow gap4"
    >
      <div
        className=" popup"
        data-headlessui-state=""
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          className="trigger"
          data-headlessui-state=""
          disabled={false}
          id="headlessui-listbox-button-:rk:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <button
            className="button outline size_m"
            type="button"
          >
            bottom right
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/ListBox Top Left Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    style={
      {
        "padding": "100px",
      }
    }
  >
    <div
      className="app app_dark_theme"
    >
      <div
        className="flex justifyStart alignCenter directionRow gap4"
      >
        <div
          className=" popup"
          data-headlessui-state=""
        >
          <div
            aria-expanded={false}
            aria-haspopup="listbox"
            className="trigger"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-listbox-button-:rm:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <button
              className="button outline size_m"
              type="button"
            >
              top left
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/ListBox Top Left Light 1`] = `
<div
  className="app app_light_theme"
>
  <div
    style={
      {
        "padding": "100px",
      }
    }
  >
    <div
      className="flex justifyStart alignCenter directionRow gap4"
    >
      <div
        className=" popup"
        data-headlessui-state=""
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          className="trigger"
          data-headlessui-state=""
          disabled={false}
          id="headlessui-listbox-button-:ro:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <button
            className="button outline size_m"
            type="button"
          >
            top left
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/ListBox Top Right Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    style={
      {
        "padding": "100px",
      }
    }
  >
    <div
      className="app app_dark_theme"
    >
      <div
        className="flex justifyStart alignCenter directionRow gap4"
      >
        <div
          className=" popup"
          data-headlessui-state=""
        >
          <div
            aria-expanded={false}
            aria-haspopup="listbox"
            className="trigger"
            data-headlessui-state=""
            disabled={false}
            id="headlessui-listbox-button-:rq:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <button
              className="button outline size_m"
              type="button"
            >
              top right
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/ListBox Top Right Light 1`] = `
<div
  className="app app_light_theme"
>
  <div
    style={
      {
        "padding": "100px",
      }
    }
  >
    <div
      className="flex justifyStart alignCenter directionRow gap4"
    >
      <div
        className=" popup"
        data-headlessui-state=""
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          className="trigger"
          data-headlessui-state=""
          disabled={false}
          id="headlessui-listbox-button-:rs:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <button
            className="button outline size_m"
            type="button"
          >
            top right
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Loader Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="lds-ellipsis"
    >
      <div />
      <div />
      <div />
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Loader Normal 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="lds-ellipsis"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Storyshots shared/Modal Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  />
</div>
`;

exports[`Storyshots shared/Modal Primary 1`] = `
<div
  className="app app_light_theme"
/>
`;

exports[`Storyshots shared/Overlay Dark 1`] = `null`;

exports[`Storyshots shared/Overlay Normal 1`] = `null`;

exports[`Storyshots shared/Popover Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className=" popup"
      data-headlessui-state=""
    >
      <div
        aria-expanded={false}
        className="trigger"
        data-headlessui-state=""
        id="headlessui-popover-button-:ru:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Popover Normal 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className=" popup"
    data-headlessui-state=""
  >
    <div
      aria-expanded={false}
      className="trigger"
      data-headlessui-state=""
      id="headlessui-popover-button-:r13:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots shared/Select Primary 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="selectWrapper"
  >
    <span
      className="label"
    >
      Укажите значение&gt;
    </span>
    <select
      className="select"
      onChange={[Function]}
    >
      <option
        className="option"
        value="1"
      >
        Первый пункт
      </option>
      <option
        className="option"
        value="2"
      >
        Второй пункт
      </option>
      <option
        className="option"
        value="3"
      >
        Третий пункт
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots shared/Skeleton Circle 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="skeleton"
    style={
      {
        "borderRadius": undefined,
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`Storyshots shared/Skeleton Circle Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="skeleton"
      style={
        {
          "borderRadius": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Skeleton Normal 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="skeleton"
    style={
      {
        "borderRadius": undefined,
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`Storyshots shared/Skeleton Normal Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="skeleton"
      style={
        {
          "borderRadius": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/StarRating Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="starRating"
    >
      <div />
      <div />
      <div />
      <div />
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/StarRating Normal 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="starRating"
  >
    <div />
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Storyshots shared/Tabs Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="tabs"
    >
      <div
        className="card tab outline"
        onClick={[Function]}
      >
        tab1
      </div>
      <div
        className="card tab normal"
        onClick={[Function]}
      >
        tab2
      </div>
      <div
        className="card tab outline"
        onClick={[Function]}
      >
        tab3
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Tabs Normal 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="tabs"
  >
    <div
      className="card tab outline"
      onClick={[Function]}
    >
      tab1
    </div>
    <div
      className="card tab normal"
      onClick={[Function]}
    >
      tab2
    </div>
    <div
      className="card tab outline"
      onClick={[Function]}
    >
      tab3
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Text Error 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="textWrapper error left size_m"
  >
    <h2
      className="title"
      data-testid="Text.Header"
    >
      Title
    </h2>
    <p
      className="text"
      data-testid="Text.Paragraph"
    >
      text lorem
    </p>
  </div>
</div>
`;

exports[`Storyshots shared/Text Only Text 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="textWrapper primary left size_m"
  >
    <p
      className="text"
      data-testid="Text.Paragraph"
    >
      text lorem
    </p>
  </div>
</div>
`;

exports[`Storyshots shared/Text Only Text Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="textWrapper primary left size_m"
    >
      <p
        className="text"
        data-testid="Text.Paragraph"
      >
        text lorem
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Text Only Title 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="textWrapper primary left size_m"
  >
    <h2
      className="title"
      data-testid="Text.Header"
    >
      Title
    </h2>
  </div>
</div>
`;

exports[`Storyshots shared/Text Only Title Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="textWrapper primary left size_m"
    >
      <h2
        className="title"
        data-testid="Text.Header"
      >
        Title
      </h2>
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Text Primary 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="textWrapper primary left size_m"
  >
    <h2
      className="title"
      data-testid="Text.Header"
    >
      Title
    </h2>
    <p
      className="text"
      data-testid="Text.Paragraph"
    >
      text lorem
    </p>
  </div>
</div>
`;

exports[`Storyshots shared/Text Primary Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="textWrapper primary left size_m"
    >
      <h2
        className="title"
        data-testid="Text.Header"
      >
        Title
      </h2>
      <p
        className="text"
        data-testid="Text.Paragraph"
      >
        text lorem
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots shared/Text Size L 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="textWrapper primary left size_l"
  >
    <h1
      className="title"
      data-testid="Text.Header"
    >
      Title
    </h1>
    <p
      className="text"
      data-testid="Text.Paragraph"
    >
      text lorem
    </p>
  </div>
</div>
`;

exports[`Storyshots shared/Text Size M 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="textWrapper primary left size_m"
  >
    <h2
      className="title"
      data-testid="Text.Header"
    >
      Title
    </h2>
    <p
      className="text"
      data-testid="Text.Paragraph"
    >
      text lorem
    </p>
  </div>
</div>
`;

exports[`Storyshots shared/Text Size S 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="textWrapper primary left size_s"
  >
    <h3
      className="title"
      data-testid="Text.Header"
    >
      Title
    </h3>
    <p
      className="text"
      data-testid="Text.Paragraph"
    >
      text lorem
    </p>
  </div>
</div>
`;

exports[`Storyshots widgets/Navbar Auth Dark 1`] = `null`;

exports[`Storyshots widgets/Navbar Dark 1`] = `null`;

exports[`Storyshots widgets/Navbar Light 1`] = `null`;

exports[`Storyshots widgets/Page Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <main
      className="page"
      data-testid="Page"
      id="PAGE_ID"
      onScroll={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots widgets/Page Normal 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_light_theme"
  >
    <main
      className="page"
      data-testid="Page"
      id="PAGE_ID"
      onScroll={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots widgets/PageError Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <div
      className="pageError"
    >
      <p>
        Произошла непредвиденная ошибка
      </p>
      <button
        className="button outline size_m"
        onClick={[Function]}
        type="button"
      >
        Обновить страницу
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/PageError Light 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="pageError"
  >
    <p>
      Произошла непредвиденная ошибка
    </p>
    <button
      className="button outline size_m"
      onClick={[Function]}
      type="button"
    >
      Обновить страницу
    </button>
  </div>
</div>
`;

exports[`Storyshots widgets/Sidebar Dark 1`] = `null`;

exports[`Storyshots widgets/Sidebar Light 1`] = `null`;

exports[`Storyshots widgets/Sidebar No Auth 1`] = `null`;

exports[`Storyshots widgets/ThemeSwitcher Dark 1`] = `
<div
  className="app app_light_theme"
>
  <div
    className="app app_dark_theme"
  >
    <button
      className="button clear size_m"
      onClick={[Function]}
      type="button"
    >
      <div />
    </button>
  </div>
</div>
`;

exports[`Storyshots widgets/ThemeSwitcher Normal 1`] = `
<div
  className="app app_light_theme"
>
  <button
    className="button clear size_m"
    onClick={[Function]}
    type="button"
  >
    <div />
  </button>
</div>
`;
